# my-comfyui-container

./: .containerignore  Containerfile  LICENSE  README.md
.github/: .releaserc.yaml  .trivyignore  package.json
.github/workflows/: auto-release.yml  cleanup-ghcr.yml  docker-publish.yml  podman-publish.yml  scan-repository.yml
data/: pyproject.toml
data/apt.conf.d/: keep-cache.conf
data/comfyui/: extra_model_paths.yaml
data/comfyui/user/default/ComfyUI-Manager/: config.ini
data/s6-overlay/s6-rc.d/comfyui/: finish  run
data/s6-overlay/s6-rc.d/comfyui-preinstall/: up
data/s6-overlay/s6-rc.d/timezone/: up
